--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -8,6 +8,10 @@
   font-variation-settings:
     "wdth" 100;
 }
+/*shared style*/
+.secondary-bg{
+  background-color: #FFF8F3;
+}
 
 .test-primary{
     color:#FD6E0A
@@ -26,11 +30,12 @@
 
 }
 .Header{
-  background-image: url('../images/developer.png'),url(../images/header_bg.png)
+  background-image: url('../images/developer.png'),url(../images/header_bg.png);
   background-repeat: no-repeat;
   background-position:top left, bottom right;
   
 }
+/*nav style*/
 
 nav{
   display: flex;
@@ -76,4 +81,35 @@ nav{
 }
 .banner-profile-pic {
   width: 580px;
+}
+/*section style about me */
+.section-title {
+  font-weight: bold;
+  font-size: 35px;
+color: #181818;
+}
+.section-description{
+  font-size: 18px;
+  color:#757575
+
+}
+/*main Style*/
+main{
+  max-width: 1140px;
+  margin:0 auto;
+}
+
+/*about styles*/
+.about{
+border-radius: 10px;
+padding: 131px 157px;
+text-align: centers;
+margin-top: 130px;
+}
+.about-items{
+  display: flex;
+  justify-content: space-around;
+}
+.iteam-description{
+  font-weight: 600;
 }
